@@ -147,13 +147,13 @@ query (void)
                           "Michael Natterer <mitch@gimp.org>",
                           "Michael Natterer <mitch@gimp.org>",
                           "2000",
-			  N_("_Unit Editor"),
+			  N_("U_nits"),
 			  "",
                           GIMP_PLUGIN,
 			  G_N_ELEMENTS (args), 0,
                           args, NULL);
 
-  gimp_plugin_menu_register (PLUG_IN_PROC, "<Toolbox>/Xtns/Extensions");
+  gimp_plugin_menu_register (PLUG_IN_PROC, "<Image>/Edit/Preferences");
   gimp_plugin_icon_register (PLUG_IN_PROC, GIMP_ICON_TYPE_STOCK_ID,
                              (const guint8 *) GIMP_STOCK_TOOL_MEASURE);
 }
